Global refactoring of API code, including usage of PHP-DI container
